--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "license": "MIT",
     "dependencies": {
         "tunnel": "0.0.6",
-        "typed-rest-client": "^1.8.4",
-        "underscore": "1.12.1"
+        "typed-rest-client": "^1.8.4"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.44",
